--- a/src/Utils/styles.css
+++ b/src/Utils/styles.css
@@ -2,3 +2,10 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    font-size: 25px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: white;
+    background: #141414;
+}
